--- a/docs/docs/deep-learning/pytorch/quickstart/pytorch_quickstart.ipynb
+++ b/docs/docs/deep-learning/pytorch/quickstart/pytorch_quickstart.ipynb
@@ -579,7 +579,7 @@
     "        evaluate(test_dataloader, model, loss_fn, metric_fn, epoch=0)\n",
     "\n",
     "    # Save the trained model to MLflow.\n",
-    "    mlflow.pytorch.log_model(model, \"model\")"
+    "    mlflow.pytorch.log_model(model, name=\"model\")"
    ]
   },
   {
