--- a/docs/docs/getting-started/intro-quickstart/notebooks/tracking_quickstart.ipynb
+++ b/docs/docs/getting-started/intro-quickstart/notebooks/tracking_quickstart.ipynb
@@ -167,7 +167,7 @@
     "    # Log the model\n",
     "    model_info = mlflow.sklearn.log_model(\n",
     "        sk_model=lr,\n",
-    "        artifact_path=\"iris_model\",\n",
+    "        name=\"iris_model\",\n",
     "        signature=signature,\n",
     "        input_example=X_train,\n",
     "        registered_model_name=\"tracking-quickstart\",\n",
