--- a/docs/docs/getting-started/logging-first-model/notebooks/logging-first-model.ipynb
+++ b/docs/docs/getting-started/logging-first-model/notebooks/logging-first-model.ipynb
@@ -740,7 +740,7 @@
     "    mlflow.log_metrics(metrics)\n",
     "\n",
     "    # Log an instance of the trained model for later use\n",
-    "    mlflow.sklearn.log_model(sk_model=rf, input_example=X_val, artifact_path=artifact_path)"
+    "    mlflow.sklearn.log_model(sk_model=rf, input_example=X_val, name=artifact_path)"
    ]
   },
   {
