--- a/docs/docs/llms/custom-pyfunc-for-llms/notebooks/custom-pyfunc-advanced-llm.ipynb
+++ b/docs/docs/llms/custom-pyfunc-for-llms/notebooks/custom-pyfunc-advanced-llm.ipynb
@@ -686,7 +686,7 @@
     "# allow for overriding parameters at inference time\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
-    "        \"mpt-7b-instruct\",\n",
+    "        name=\"mpt-7b-instruct\",\n",
     "        python_model=MPT(),\n",
     "        # NOTE: the artifacts dictionary mapping is critical! This dict is used by the load_context() method in our MPT() class.\n",
     "        artifacts={\"snapshot\": snapshot_location},\n",
