--- a/docs/docs/llms/dspy/notebooks/dspy_quickstart.ipynb
+++ b/docs/docs/llms/dspy/notebooks/dspy_quickstart.ipynb
@@ -869,7 +869,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.dspy.log_model(\n",
     "        compiled_pe,\n",
-    "        \"model\",\n",
+    "        name=\"model\",\n",
     "        input_example=\"what is 2 + 2?\",\n",
     "    )"
    ]
