--- a/docs/docs/llms/langchain/notebooks/langchain-quickstart.ipynb
+++ b/docs/docs/llms/langchain/notebooks/langchain-quickstart.ipynb
@@ -265,7 +265,7 @@
     "mlflow.set_experiment(\"Cooking Assistant\")\n",
     "\n",
     "with mlflow.start_run():\n",
-    "    model_info = mlflow.langchain.log_model(chain, \"langchain_model\")"
+    "    model_info = mlflow.langchain.log_model(chain, name=\"langchain_model\")"
    ]
   },
   {
