--- a/docs/docs/llms/langchain/notebooks/langchain-retriever.ipynb
+++ b/docs/docs/llms/langchain/notebooks/langchain-retriever.ipynb
@@ -345,7 +345,7 @@
     "with mlflow.start_run() as run:\n",
     "    model_info = mlflow.langchain.log_model(\n",
     "        retrievalQA,\n",
-    "        artifact_path=\"retrieval_qa\",\n",
+    "        name=\"retrieval_qa\",\n",
     "        loader_fn=load_retriever,\n",
     "        persist_dir=persist_dir,\n",
     "    )"
