--- a/docs/docs/llms/llama-index/notebooks/llama_index_quickstart.ipynb
+++ b/docs/docs/llms/llama-index/notebooks/llama_index_quickstart.ipynb
@@ -221,7 +221,7 @@
     "with mlflow.start_run() as run:\n",
     "    mlflow.llama_index.log_model(\n",
     "        index,\n",
-    "        artifact_path=\"llama_index\",\n",
+    "        name=\"llama_index\",\n",
     "        engine_type=\"query\",  # Defines the pyfunc and spark_udf inference type\n",
     "        input_example=\"hi\",  # Infers signature\n",
     "        registered_model_name=\"my_llama_index_vector_store\",  # Stores an instance in the model registry\n",
