--- a/docs/docs/llms/llama-index/notebooks/llama_index_workflow_tutorial.ipynb
+++ b/docs/docs/llms/llama-index/notebooks/llama_index_workflow_tutorial.ipynb
@@ -872,7 +872,7 @@
     "with mlflow.start_run(run_name=\"react-agent-workflow\"):\n",
     "    model_info = mlflow.llama_index.log_model(\n",
     "        \"react_agent.py\",\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        # Logging with an input example help MLflow to record dependency and signature information accurately.\n",
     "        input_example={\"input\": \"What is (123 + 456) * 789?\"},\n",
     "    )"
