--- a/docs/docs/llms/notebooks/chat-model-tool-calling.ipynb
+++ b/docs/docs/llms/notebooks/chat-model-tool-calling.ipynb
@@ -415,7 +415,7 @@
     "# log the model\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
-    "        artifact_path=\"weather-model\",\n",
+    "        name=\"weather-model\",\n",
     "        python_model=model,\n",
     "        input_example=input_example,\n",
     "    )\n",
