--- a/docs/docs/llms/openai/notebooks/openai-chat-completions.ipynb
+++ b/docs/docs/llms/openai/notebooks/openai-chat-completions.ipynb
@@ -159,7 +159,7 @@
     "    model_info = mlflow.openai.log_model(\n",
     "        model=\"gpt-4\",\n",
     "        task=openai.chat.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        messages=messages,\n",
     "        signature=ModelSignature(\n",
     "            inputs=Schema([ColSpec(type=\"string\", name=None)]),\n",
