--- a/docs/docs/llms/openai/notebooks/openai-code-helper.ipynb
+++ b/docs/docs/llms/openai/notebooks/openai-code-helper.ipynb
@@ -234,7 +234,7 @@
     "    model_info = mlflow.openai.log_model(\n",
     "        model=\"gpt-4\",\n",
     "        task=openai.chat.completions,\n",
-    "        artifact_path=\"base_model\",\n",
+    "        name=\"base_model\",\n",
     "        messages=instruction,\n",
     "        signature=signature,\n",
     "    )"
@@ -373,7 +373,7 @@
     "\n",
     "with mlflow.start_run():\n",
     "    helper_model = mlflow.pyfunc.log_model(\n",
-    "        artifact_path=\"code_helper\",\n",
+    "        name=\"code_helper\",\n",
     "        python_model=CodeHelper(),\n",
     "        input_example=[\"x = 1\"],\n",
     "        signature=signature,\n",
