--- a/docs/docs/llms/openai/notebooks/openai-embeddings-generation.ipynb
+++ b/docs/docs/llms/openai/notebooks/openai-embeddings-generation.ipynb
@@ -100,7 +100,7 @@
     "    model_info = mlflow.openai.log_model(\n",
     "        model=\"text-embedding-ada-002\",\n",
     "        task=openai.embeddings,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        signature=ModelSignature(\n",
     "            inputs=Schema([ColSpec(type=\"string\", name=None)]),\n",
     "            outputs=Schema([TensorSpec(type=np.dtype(\"float64\"), shape=(-1,))]),\n",
