--- a/docs/docs/llms/openai/notebooks/openai-quickstart.ipynb
+++ b/docs/docs/llms/openai/notebooks/openai-quickstart.ipynb
@@ -210,7 +210,7 @@
     "    model_info = mlflow.openai.log_model(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        task=openai.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        prompt=lyrics_prompt,\n",
     "        signature=ModelSignature(\n",
     "            inputs=Schema([ColSpec(type=\"string\", name=None)]),\n",
@@ -377,7 +377,7 @@
     "    model_info = mlflow.openai.log_model(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        task=openai.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        prompt=improved_lyrics_prompt,\n",
     "        signature=ModelSignature(\n",
     "            inputs=Schema([ColSpec(type=\"string\", name=None)]),\n",
