--- a/docs/docs/llms/sentence-transformers/tutorials/paraphrase-mining/paraphrase-mining-sentence-transformers.ipynb
+++ b/docs/docs/llms/sentence-transformers/tutorials/paraphrase-mining/paraphrase-mining-sentence-transformers.ipynb
@@ -457,7 +457,7 @@
    "source": [
     "with mlflow.start_run() as run:\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
-    "        \"paraphrase_model\",\n",
+    "        name=\"paraphrase_model\",\n",
     "        python_model=ParaphraseMiningModel(),\n",
     "        input_example=input_example,\n",
     "        signature=signature,\n",
