--- a/docs/docs/llms/sentence-transformers/tutorials/semantic-search/semantic-search-sentence-transformers.ipynb
+++ b/docs/docs/llms/sentence-transformers/tutorials/semantic-search/semantic-search-sentence-transformers.ipynb
@@ -470,7 +470,7 @@
    "source": [
     "with mlflow.start_run() as run:\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
-    "        \"semantic_search\",\n",
+    "        name=\"semantic_search\",\n",
     "        python_model=SemanticSearchModel(),\n",
     "        input_example=input_example,\n",
     "        signature=signature,\n",
