--- a/docs/docs/llms/transformers/tutorials/audio-transcription/whisper.ipynb
+++ b/docs/docs/llms/transformers/tutorials/audio-transcription/whisper.ipynb
@@ -334,7 +334,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=audio_transcription_pipeline,\n",
-    "        artifact_path=\"whisper_transcriber\",\n",
+    "        name=\"whisper_transcriber\",\n",
     "        signature=signature,\n",
     "        input_example=audio,\n",
     "        model_config=model_config,\n",
