--- a/docs/docs/llms/transformers/tutorials/conversational/conversational-model.ipynb
+++ b/docs/docs/llms/transformers/tutorials/conversational/conversational-model.ipynb
@@ -177,7 +177,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=conversational_pipeline,\n",
-    "        artifact_path=\"chatbot\",\n",
+    "        name=\"chatbot\",\n",
     "        task=\"conversational\",\n",
     "        signature=signature,\n",
     "        input_example=\"A clever and witty question\",\n",
