--- a/docs/docs/llms/transformers/tutorials/fine-tuning/transformers-fine-tuning.ipynb
+++ b/docs/docs/llms/transformers/tutorials/fine-tuning/transformers-fine-tuning.ipynb
@@ -935,7 +935,7 @@
     "with mlflow.start_run(run_id=run.info.run_id):\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=tuned_pipeline,\n",
-    "        artifact_path=\"fine_tuned\",\n",
+    "        name=\"fine_tuned\",\n",
     "        signature=signature,\n",
     "        input_example=[\"Pass in a string\", \"And have it mark as spam or not.\"],\n",
     "        model_config=model_config,\n",
