--- a/docs/docs/llms/transformers/tutorials/fine-tuning/transformers-peft.ipynb
+++ b/docs/docs/llms/transformers/tutorials/fine-tuning/transformers-peft.ipynb
@@ -1049,7 +1049,7 @@
     "        transformers_model={\"model\": trainer.model, \"tokenizer\": tokenizer_no_pad},\n",
     "        prompt_template=prompt_template,\n",
     "        signature=signature,\n",
-    "        artifact_path=\"model\",  # This is a relative path to save model files within MLflow run\n",
+    "        name=\"model\",  # This is a relative path to save model files within MLflow run\n",
     "    )"
    ]
   },
