--- a/docs/docs/llms/transformers/tutorials/prompt-templating/prompt-templating.ipynb
+++ b/docs/docs/llms/transformers/tutorials/prompt-templating/prompt-templating.ipynb
@@ -233,7 +233,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=generator,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        task=\"text-generation\",\n",
     "        signature=signature,\n",
     "        input_example=\"Tell me the largest bird\",\n",
