--- a/docs/docs/llms/transformers/tutorials/text-generation/text-generation.ipynb
+++ b/docs/docs/llms/transformers/tutorials/text-generation/text-generation.ipynb
@@ -258,7 +258,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=generation_pipeline,\n",
-    "        artifact_path=\"text_generator\",\n",
+    "        name=\"text_generator\",\n",
     "        input_example=input_example,\n",
     "        signature=signature,\n",
     "        # Uncomment the following line to save the model in 'reference-only' mode:\n",
