--- a/docs/docs/llms/transformers/tutorials/translation/component-translation.ipynb
+++ b/docs/docs/llms/transformers/tutorials/translation/component-translation.ipynb
@@ -317,7 +317,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.transformers.log_model(\n",
     "        transformers_model=translation_pipeline,\n",
-    "        artifact_path=\"french_translator\",\n",
+    "        name=\"french_translator\",\n",
     "        signature=signature,\n",
     "        model_params=model_params,\n",
     "    )"
