--- a/docs/docs/model/notebooks/signature_examples.ipynb
+++ b/docs/docs/model/notebooks/signature_examples.ipynb
@@ -566,7 +566,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
     "        python_model=MyModel(),\n",
-    "        artifact_path=\"test_model\",\n",
+    "        name=\"test_model\",\n",
     "        signature=infer_signature(model_input=data, model_output=model_output),\n",
     "    )\n",
     "\n",
@@ -766,7 +766,7 @@
     "with mlflow.start_run():\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
     "        python_model=MyTypeCheckerModel(),\n",
-    "        artifact_path=\"test_model\",\n",
+    "        name=\"test_model\",\n",
     "    )\n",
     "\n",
     "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)\n",
