--- a/docs/docs/traditional-ml/hyperparameter-tuning-with-child-runs/notebooks/hyperparameter-tuning-with-child-runs.ipynb
+++ b/docs/docs/traditional-ml/hyperparameter-tuning-with-child-runs/notebooks/hyperparameter-tuning-with-child-runs.ipynb
@@ -1240,7 +1240,7 @@
     "\n",
     "    mlflow.xgboost.log_model(\n",
     "        xgb_model=model,\n",
-    "        artifact_path=artifact_path,\n",
+    "        name=artifact_path,\n",
     "        input_example=train_x.iloc[[0]],\n",
     "        model_format=\"ubj\",\n",
     "        metadata={\"model_data_version\": 1},\n",
