--- a/docs/docs/traditional-ml/hyperparameter-tuning-with-child-runs/notebooks/logging-plots-in-mlflow.ipynb
+++ b/docs/docs/traditional-ml/hyperparameter-tuning-with-child-runs/notebooks/logging-plots-in-mlflow.ipynb
@@ -1111,7 +1111,7 @@
     "# Start an MLflow run for logging metrics, parameters, the model, and our figures\n",
     "with mlflow.start_run() as run:\n",
     "    # Log the model\n",
-    "    mlflow.sklearn.log_model(sk_model=model, input_example=X_test, artifact_path=\"model\")\n",
+    "    mlflow.sklearn.log_model(sk_model=model, input_example=X_test, name=\"model\")\n",
     "\n",
     "    # Log the metrics\n",
     "    mlflow.log_metrics(\n",
