--- a/examples/demos/pythonmodel_agent_with_uc_tools.ipynb
+++ b/examples/demos/pythonmodel_agent_with_uc_tools.ipynb
@@ -329,7 +329,7 @@
     "\n",
     "with mlflow.start_run():\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
-    "        \"model\",\n",
+    "        name=\"model\",\n",
     "        # Pass the path to the saved model file\n",
     "        python_model=\"agent.py\",\n",
     "        input_example=input_example,\n",
