--- a/examples/demos/pythonmodel_type_hints_quickstart.ipynb
+++ b/examples/demos/pythonmodel_type_hints_quickstart.ipynb
@@ -152,7 +152,7 @@
    "source": [
     "# log the model\n",
     "with mlflow.start_run():\n",
-    "    model_info = mlflow.pyfunc.log_model(\"model\", python_model=model, input_example=messages)"
+    "    model_info = mlflow.pyfunc.log_model(name=\"model\", python_model=model, input_example=messages)"
    ]
   },
   {
