--- a/examples/evaluation/qa-evaluation.ipynb
+++ b/examples/evaluation/qa-evaluation.ipynb
@@ -185,7 +185,7 @@
     "    basic_qa_model = mlflow.openai.log_model(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        task=openai.chat.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
@@ -1336,7 +1336,7 @@
     "    professional_qa_model = mlflow.openai.log_model(\n",
     "        model=\"gpt-4o-mini\",\n",
     "        task=openai.chat.completions,\n",
-    "        artifact_path=\"model\",\n",
+    "        name=\"model\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": \"{question}\"},\n",
