--- a/examples/h2o/random_forest.ipynb
+++ b/examples/h2o/random_forest.ipynb
@@ -121,7 +121,7 @@
     "        mlflow.log_metric(\"r2\", rf.r2())\n",
     "        mlflow.log_metric(\"mae\", rf.mae())\n",
     "\n",
-    "        mlflow.h2o.log_model(rf, \"model\")"
+    "        mlflow.h2o.log_model(rf, name=\"model\")"
    ]
   },
   {
