--- a/examples/llama_index/workflow/Tutorial.ipynb
+++ b/examples/llama_index/workflow/Tutorial.ipynb
@@ -510,7 +510,7 @@
     "            # Define dependency files to save along with the model\n",
     "            code_paths=[\"workflow\"],\n",
     "            # Subdirectory to save artifacts (not important)\n",
-    "            artifact_path=\"model\",\n",
+    "            name=\"model\",\n",
     "        )\n",
     "        models.append(model_info)"
    ]
