--- a/examples/rapids/mlflow_project/notebooks/rapids_mlflow.ipynb
+++ b/examples/rapids/mlflow_project/notebooks/rapids_mlflow.ipynb
@@ -146,7 +146,7 @@
     "    mlflow.sklearn.log_model(\n",
     "        model,\n",
     "        signature=signature,\n",
-    "        artifact_path=artifact_path,\n",
+    "        name=artifact_path,\n",
     "        registered_model_name=\"rapids-mlflow-notebook\",\n",
     "        conda_env=\"conda.yaml\",\n",
     "    )\n",
