--- a/examples/sklearn_elasticnet_wine/train.ipynb
+++ b/examples/sklearn_elasticnet_wine/train.ipynb
@@ -104,7 +104,7 @@
     "        mlflow.log_metric(\"r2\", r2)\n",
     "        mlflow.log_metric(\"mae\", mae)\n",
     "\n",
-    "        mlflow.sklearn.log_model(lr, \"model\", signature=signature)"
+    "        mlflow.sklearn.log_model(lr, name=\"model\", signature=signature)"
    ]
   },
   {
