--- a/docs/docs/llms/sentence-transformers/tutorials/quickstart/sentence-transformers-quickstart.ipynb
+++ b/docs/docs/llms/sentence-transformers/tutorials/quickstart/sentence-transformers-quickstart.ipynb
@@ -210,7 +210,7 @@
     "with mlflow.start_run():\n",
     "    logged_model = mlflow.sentence_transformers.log_model(\n",
     "        model=model,\n",
-    "        artifact_path=\"sbert_model\",\n",
+    "        name=\"sbert_model\",\n",
     "        signature=signature,\n",
     "        input_example=example_sentences,\n",
     "    )"
