--- a/docs/docs/llms/sentence-transformers/tutorials/semantic-similarity/semantic-similarity-sentence-transformers.ipynb
+++ b/docs/docs/llms/sentence-transformers/tutorials/semantic-similarity/semantic-similarity-sentence-transformers.ipynb
@@ -302,7 +302,7 @@
     "\n",
     "with mlflow.start_run() as run:\n",
     "    model_info = mlflow.pyfunc.log_model(\n",
-    "        \"similarity\",\n",
+    "        name=\"similarity\",\n",
     "        python_model=SimilarityModel(),\n",
     "        input_example=input_example,\n",
     "        signature=signature,\n",
