--- a/docs/docs/traditional-ml/serving-multiple-models-with-pyfunc/notebooks/MME_Tutorial.ipynb
+++ b/docs/docs/traditional-ml/serving-multiple-models-with-pyfunc/notebooks/MME_Tutorial.ipynb
@@ -338,7 +338,7 @@
     "        # Log and register our DOW model with signature\n",
     "        mlflow.sklearn.log_model(\n",
     "            model,\n",
-    "            model_path,\n",
+    "            name=model_path,\n",
     "            signature=signature,\n",
     "            registered_model_name=f\"{DOW_MODEL_NAME_PREFIX}{dow}\",\n",
     "        )\n",
@@ -699,7 +699,7 @@
     "\n",
     "    # Log the model to the experiment\n",
     "    mlflow.pyfunc.log_model(\n",
-    "        model_path,\n",
+    "        name=model_path,\n",
     "        python_model=model,\n",
     "        signature=signature,\n",
     "        pip_requirements=[\"scikit-learn=1.3.2\"],\n",
