--- a/docs/docs/tracing/integrations/ag2.mdx
+++ b/docs/docs/tracing/integrations/ag2.mdx
@@ -11,7 +11,7 @@ import TabItem from "@theme/TabItem";
 
 # Tracing AG2🤖
 
-![AutoGen Tracing via autolog](/images/llms/ag2/ag2-trace.png)
+![AG2 Tracing via autolog](/images/llms/ag2/ag2-trace.png)
 
 [AG2](https://ag2.ai/) is an open-source framework for building and orchestrating AI agent interactions.
 
