--- a/docs/docs/classic-ml/deep-learning/tensorflow/guide/index.mdx
+++ b/docs/docs/classic-ml/deep-learning/tensorflow/guide/index.mdx
@@ -9,7 +9,7 @@ how to track your Tensorflow experiments and log your Tensorflow models to MLflo
 
 :::warning attention
 Autologging is only supported when you are using the `model.fit()` Keras API to train
-the model. Additionally only Tensorflow >= 2.3.0 is supported. If you are using an older version
+your model. Additionally, only Tensorflow >= 2.3.0 is supported. If you are using an older version
 of Tensorflow or Tensorflow without Keras, please use manual logging.
 :::
 
