--- a/docs/docs/classic-ml/getting-started/hyperparameter-tuning/index.mdx
+++ b/docs/docs/classic-ml/getting-started/hyperparameter-tuning/index.mdx
@@ -1,4 +1,4 @@
-# Quickstart: Compare runs, choose a model, and deploy it to a REST API
+# Hyperparameter Tuning Quickstart
 
 In this quickstart, you will:
 
