--- a/docs/docs/classic-ml/getting-started/logging-first-model/index.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/index.mdx
@@ -4,7 +4,7 @@ sidebar-position: 3
 
 import { NotebookDownloadButton } from "@site/src/components/NotebookDownloadButton";
 
-# Tutorial Overview
+# Logging Your First Model
 
 In this entry point tutorial to MLflow, we'll be covering the essential basics of core MLflow functionality associated
 with tracking training event data.
@@ -25,15 +25,15 @@ The topics in this tutorial cover:
 - Learning how to **log** metrics, parameters, and a model artifact to a run
 - Viewing our Experiment and our first run within the **MLflow UI**
 
-To get started with the tutorial, click NEXT below or navigate to the section that you're interested in:
+To get started with the tutorial, select the first link below or navigate to the section that you're interested in:
 
-- [Starting an MLflow Tracking Server](/getting-started/logging-first-model/step1-tracking-server)
-- [Using the MLflow Client API](/getting-started/logging-first-model/step2-mlflow-client)
-- [Creating Experiments](/getting-started/logging-first-model/step3-create-experiment)
-- [Searching Experiments](/getting-started/logging-first-model/step4-experiment-search)
-- [Create a dataset about apples](/getting-started/logging-first-model/step5-synthetic-data)
-- [Logging our first runs with MLflow](/getting-started/logging-first-model/step6-logging-a-run)
-- [Logging Your First MLflow Model Notebook](/getting-started/logging-first-model/notebooks)
+- [Starting an MLflow Tracking Server](/ml/getting-started/logging-first-model/step1-tracking-server)
+- [Using the MLflow Client API](/ml/getting-started/logging-first-model/step2-mlflow-client)
+- [Creating Experiments](/ml/getting-started/logging-first-model/step3-create-experiment)
+- [Searching Experiments](/ml/getting-started/logging-first-model/step4-experiment-search)
+- [Create a dataset about apples](/ml/getting-started/logging-first-model/step5-synthetic-data)
+- [Logging our first runs with MLflow](/ml/getting-started/logging-first-model/step6-logging-a-run)
+- [Logging Your First MLflow Model Notebook](/ml/getting-started/logging-first-model/notebooks)
 
 If you would instead like to download a notebook-based version of this guide and follow along locally, you can download the notebook from the link below.
 
