--- a/docs/docs/classic-ml/getting-started/logging-first-model/step1-tracking-server/index.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step1-tracking-server/index.mdx
@@ -51,3 +51,5 @@ this information in the next section of this tutorial!
 
 Congratulations! Your MLflow environment is now set up and ready to go. As you progress, you'll
 explore the myriad of functionalities MLflow has to offer, streamlining and enhancing your machine learning workflows.
+
+You can now [continue to the next section](/ml/getting-started/logging-first-model/step2-mlflow-client) of the tutorial, or [return to the tutorial listing](/ml/getting-started/logging-first-model).
