--- a/docs/docs/classic-ml/getting-started/logging-first-model/step2-mlflow-client/index.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step2-mlflow-client/index.mdx
@@ -110,3 +110,5 @@ In the next step, we'll create our first experiment and dive into the options th
 providing metadata information that helps to keep track of related experiments and organize our
 runs within experiments so that we can effectively compare the results of different parameters
 for training runs.
+
+You can now [continue to the next section](/ml/getting-started/logging-first-model/step3-create-experiment) of the tutorial, or [return to the tutorial listing](/ml/getting-started/logging-first-model).
