--- a/docs/docs/classic-ml/getting-started/logging-first-model/step3-create-experiment/index.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step3-create-experiment/index.mdx
@@ -133,3 +133,5 @@ produce_apples_experiment = client.create_experiment(
 In the next section, we'll take a look at what these tags can be used for, which are visible in the UI,
 and how we can leverage the power of `tags` to simplify access to experiments that are part of a
 larger project.
+
+You can now [continue to the next section](/ml/getting-started/logging-first-model/step4-experiment-search) of the tutorial, or [return to the tutorial listing](/ml/getting-started/logging-first-model).
