--- a/docs/docs/classic-ml/getting-started/logging-first-model/step6-logging-a-run/index.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step6-logging-a-run/index.mdx
@@ -175,3 +175,7 @@ Let's see what this looks like when we run our model training code and navigate 
 <div className="center-div" style={{ width: 1024, maxWidth: "100%" }}>
   ![Log the model to MLflow](/images/tutorials/introductory/logging-first-model/logging-first-model.gif)
 </div>
+
+Congratulations on finishing the in-depth tutorial to MLflow tracking! You can now [return to the Getting Started](/ml/getting-started) content to learn more about MLflow.
+
+If you would like to try out some notebooks to see how MLflow works in detail, you can navigate to the [Getting Started Notebooks](/ml/getting-started/logging-first-model/notebooks) to download examples locally and run them!
