--- a/docs/docs/classic-ml/getting-started/registering-first-model/index.mdx
+++ b/docs/docs/classic-ml/getting-started/registering-first-model/index.mdx
@@ -1,6 +1,6 @@
 import Link from "@docusaurus/Link";
 
-# Tutorial Overview
+# Model Registry Quickstart
 
 The MLflow Model Registry has several core components:
 
