--- a/docs/docs/classic-ml/index.mdx
+++ b/docs/docs/classic-ml/index.mdx
@@ -87,23 +87,23 @@ MLflow provides first-class support for popular ML libraries through specialized
 #### Traditional ML Libraries
 
 <CardGroup>
-  <SmallLogoCard link="/model#scikit-learn-sklearn">![scikit learn](/images/logos/scikit-learn-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#xgboost-xgboost">![XGBoost Logo](/images/logos/xgboost-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#spark-mllib-spark">![Spark Logo](/images/logos/spark-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#lightgbm-lightgbm">![LightGBM Logo](/images/logos/lightgbm-logo.png)</SmallLogoCard>
-  <SmallLogoCard link="/model#catboost-catboost">![CatBoost Logo](/images/logos/catboost-logo.png)</SmallLogoCard>
-  <SmallLogoCard link="/model#statsmodels-statsmodels">![Statsmodels Logo](/images/logos/statsmodels-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#prophet-prophet">![Prophet Logo](/images/logos/prophet-logo.png)</SmallLogoCard>
+  <SmallLogoCard link="model#scikit-learn-sklearn">![scikit learn](/images/logos/scikit-learn-logo.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#xgboost-xgboost">![XGBoost Logo](/images/logos/xgboost-logo.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#spark-mllib-spark">![Spark Logo](/images/logos/spark-logo.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#lightgbm-lightgbm">![LightGBM Logo](/images/logos/lightgbm-logo.png)</SmallLogoCard>
+  <SmallLogoCard link="model#catboost-catboost">![CatBoost Logo](/images/logos/catboost-logo.png)</SmallLogoCard>
+  <SmallLogoCard link="model#statsmodels-statsmodels">![Statsmodels Logo](/images/logos/statsmodels-logo.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#prophet-prophet">![Prophet Logo](/images/logos/prophet-logo.png)</SmallLogoCard>
 </CardGroup>
 
 #### Deep Learning Frameworks
 
 <CardGroup>
-  <SmallLogoCard link="/model#pytorch-pytorch">![PyTorch Logo](/images/logos/pytorch-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#tensorflow-tensorflow">![TensorFlow Logo](/images/logos/TensorFlow-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#keras-keras">![Keras Logo](/images/logos/keras-logo.svg)</SmallLogoCard>
-  <SmallLogoCard link="/model#onnx-onnx">![ONNX Logo](/images/logos/onnx-logo.png)</SmallLogoCard>
-  <SmallLogoCard link="/model#fastai-fastai">![fastai Logo](/images/logos/fastai-logo.png)</SmallLogoCard>
+  <SmallLogoCard link="model#pytorch-pytorch">![PyTorch Logo](/images/logos/pytorch-logo.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#tensorflow-tensorflow">![TensorFlow Logo](/images/logos/tensorflow-logo-small.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#keras-keras">![Keras Logo](/images/logos/keras-logo.svg)</SmallLogoCard>
+  <SmallLogoCard link="model#onnx-onnx">![ONNX Logo](/images/logos/onnx-logo.png)</SmallLogoCard>
+  <SmallLogoCard link="model#fastai-fastai">![fastai Logo](/images/logos/fastai-logo.png)</SmallLogoCard>
 </CardGroup>
 
 ### Experiment Tracking
@@ -129,7 +129,7 @@ MLflow Tracking provides a centralized system for organizing and comparing all a
 
 ### Deep Learning Capabilities
 
-MLflow provides specialized features to support deep learning workflows, addressing unique challenges in this domain. [➡︎ Learn more](/deep-learning)
+MLflow provides specialized features to support deep learning workflows, addressing unique challenges in this domain. [➡︎ Learn more](/ml/deep-learning)
 
 <details>
   <summary>Key Deep Learning Features</summary>
@@ -150,7 +150,7 @@ MLflow provides specialized features to support deep learning workflows, address
 
 ### Model Registry
 
-The Model Registry serves as a centralized hub for managing the full lifecycle of your ML models. [➡︎ Learn more](/model-registry)
+The Model Registry serves as a centralized hub for managing the full lifecycle of your ML models. [➡︎ Learn more](/ml/model-registry)
 
 <details>
   <summary>Key Benefits of Model Registry</summary>
@@ -171,7 +171,7 @@ The Model Registry serves as a centralized hub for managing the full lifecycle o
 
 ### MLflow Evaluate
 
-MLflow simplifies model evaluation with automated metrics generation and visualization tools. [➡︎ Learn more](/evaluate)
+MLflow simplifies model evaluation with automated metrics generation and visualization tools. [➡︎ Learn more](/ml/evaluate)
 
 <details>
   <summary>Key Benefits of MLflow Evaluate</summary>
@@ -191,7 +191,7 @@ MLflow simplifies model evaluation with automated metrics generation and visuali
 
 ### Model Deployment
 
-MLflow streamlines the transition from development to production with flexible deployment options. [➡︎ Learn more](/deployment)
+MLflow streamlines the transition from development to production with flexible deployment options. [➡︎ Learn more](/ml/deployment)
 
 <details>
   <summary>Key Benefits of Model Deployment</summary>
@@ -208,7 +208,7 @@ MLflow streamlines the transition from development to production with flexible d
 
 ### Custom PyFunc Models
 
-MLflow's PyFunc framework enables creation of custom model types for specialized use cases. [➡︎ Learn more](/traditional-ml/creating-custom-pyfunc)
+MLflow's PyFunc framework enables creation of custom model types for specialized use cases. [➡︎ Learn more](/ml/traditional-ml/creating-custom-pyfunc)
 
 <details>
   <summary>Key Benefits of Custom PyFunc</summary>
@@ -227,15 +227,15 @@ MLflow's PyFunc framework enables creation of custom model types for specialized
 ### Traditional ML
 
 <CardGroup>
-  <PageCard headerText="Hyperparameter Tuning with MLflow and Optuna" link="/traditional-ml/hyperparameter-tuning-with-child-runs" text="Explore the integration of MLflow Tracking with Optuna for hyperparameter tuning. Dive into the capabilities of MLflow, understand parent-child run relationships, and compare different tuning runs to optimize model performance." />
-  <PageCard headerText="Custom Pyfunc Models with MLflow" link="/traditional-ml/creating-custom-pyfunc" text="Dive deep into the world of MLflow's Custom Pyfunc. Starting with basic model definitions, embark on a journey that showcases the versatility and power of Pyfunc. From simple mathematical curves to complex machine learning integrations, discover how Pyfunc offers standardized, reproducible, and efficient workflows for a variety of use cases." />
-  <PageCard headerText="Multi-Model Endpoints with PyFunc" link="/traditional-ml/serving-multiple-models-with-pyfunc" text="Dive deep into custom multi-model inference via MLflow's custom PyFunc models. Learn how to simplify low-latency inference by passing additional inference parameters to a simple custom PyFunc implementation. This tutorial can serve as a jumping off point for many multi-model endpoint (MME) use cases!" />
+  <PageCard headerText="Hyperparameter Tuning with MLflow and Optuna" link="/ml/traditional-ml/hyperparameter-tuning-with-child-runs" text="Explore the integration of MLflow Tracking with Optuna for hyperparameter tuning. Dive into the capabilities of MLflow, understand parent-child run relationships, and compare different tuning runs to optimize model performance." />
+  <PageCard headerText="Custom Pyfunc Models with MLflow" link="/ml/traditional-ml/creating-custom-pyfunc" text="Dive deep into the world of MLflow's Custom Pyfunc. Starting with basic model definitions, embark on a journey that showcases the versatility and power of Pyfunc. From simple mathematical curves to complex machine learning integrations, discover how Pyfunc offers standardized, reproducible, and efficient workflows for a variety of use cases." />
+  <PageCard headerText="Multi-Model Endpoints with PyFunc" link="/ml/traditional-ml/serving-multiple-models-with-pyfunc" text="Dive deep into custom multi-model inference via MLflow's custom PyFunc models. Learn how to simplify low-latency inference by passing additional inference parameters to a simple custom PyFunc implementation. This tutorial can serve as a jumping off point for many multi-model endpoint (MME) use cases!" />
 </CardGroup>
 
 ### Deep Learning
 
 <CardGroup>
-  <PageCard headerText="Distributed Training with PyTorch and MLflow" link="/deep-learning/distributed-training-pytorch" text="Learn how to track distributed training jobs with PyTorch and MLflow. This guide covers setting up distributed training, logging metrics from multiple nodes, and visualizing training progress." />
-  <PageCard headerText="TensorFlow Model Optimization and Deployment" link="/deep-learning/tensorflow-optimization" text="Explore techniques for optimizing TensorFlow models for inference, including quantization, pruning, and hardware-specific optimizations. Learn how to track these optimizations with MLflow and deploy the optimized models." />
-  <PageCard headerText="Computer Vision Models with MLflow" link="/deep-learning/computer-vision" text="Discover how to use MLflow to manage the lifecycle of computer vision models, from training to deployment. This guide covers image classification, object detection, and segmentation models." />
+  <PageCard headerText="Distributed Training with PyTorch and MLflow" link="/ml/deep-learning/pytorch/guide" text="Learn how to track distributed training jobs with PyTorch and MLflow. This guide covers setting up distributed training, logging metrics from multiple nodes, and visualizing training progress." />
+  <PageCard headerText="TensorFlow Model Optimization and Deployment" link="/ml/deep-learning/tensorflow/guide" text="Explore techniques for optimizing TensorFlow models for inference, including quantization, pruning, and hardware-specific optimizations. Learn how to track these optimizations with MLflow and deploy the optimized models." />
+  <PageCard headerText="Using Keras with MLflow" link="/ml/deep-learning/keras/guide" text="Discover how to use MLflow to manage the lifecycle of models developed with the high-level, framework-agnostic Keras package." />
 </CardGroup>
