--- a/docs/docs/classic-ml/search-runs/index.mdx
+++ b/docs/docs/classic-ml/search-runs/index.mdx
@@ -10,6 +10,10 @@ This guide will walk you through how to search your MLflow runs through the MLfl
 This resource will be valuable if you're interested in querying specific runs based on their metrics,
 params, tags, dataset information, or run metadata.
 
+:::tip
+Looking for how to search over logged models? See the [Search Logged Models](/ml/search-models) documentation.
+:::
+
 In short, you can leverage SQL-like syntax to filter your runs based on a variety of conditions.
 Note that the `OR` keyword is not supported and there are a few other differences from SQL
 mentioned below, but despite these limitations, the run search functionality is quite powerful.
