--- a/docs/docs/classic-ml/getting-started/logging-first-model/step5-synthetic-data/index.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step5-synthetic-data/index.mdx
@@ -131,3 +131,5 @@ data[-20:]
 
 In the next section, we'll both use this generator for its output (the data set), and as an example
 for how to leverage MLflow Tracking as part of a prototyping phase for a project.
+
+You can now [continue to the next section](/ml/getting-started/logging-first-model/step6-logging-a-run) of the tutorial, or [return to the tutorial listing](/ml/getting-started/logging-first-model).
